--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -307,7 +307,8 @@ jobs:
             
 
             git clone https://github.com/ShirkNeko/SukiSU_patch.git
-            cp ./SukiSU_patch/hooks/syscall_hooks.patch ./common/
+            # cp ./SukiSU_patch/hooks/syscall_hooks.patch ./common/
+            cp ./SukiSU_patch/hooks/scope_min_manual_hooks_v1.5.patch ./common/
             cp ./SukiSU_patch/69_hide_stuff.patch ./common/
             
             if [[ "${{ github.event.inputs.SUSFS_ENABLED }}" == "true" ]]; then
@@ -319,7 +320,8 @@ jobs:
             cd ./common
             if [[ "${{ github.event.inputs.SUSFS_ENABLED }}" == "true" ]]; then            
               patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true
-              patch -p1 < syscall_hooks.patch || true
+              # patch -p1 < syscall_hooks.patch || true
+              patch -p1 < scope_min_manual_hooks_v1.5.patch || true
             fi
             patch -p1 < 69_hide_stuff.patch || true
             
@@ -327,7 +329,8 @@ jobs:
             echo "正在添加KernelSU Next补丁..."          
             
             git clone https://github.com/WildKernels/kernel_patches.git
-            cp ./kernel_patches/next/scope_min_manual_hooks_v1.4.patch ./common/
+            # cp ./kernel_patches/next/scope_min_manual_hooks_v1.4.patch ./common/
+            cp ./kernel_patches/next/scope_min_manual_hooks_v1.5.patch ./common/
             cp ./kernel_patches/69_hide_stuff.patch ./common/
 
             if [[ "${{ github.event.inputs.SUSFS_ENABLED }}" == "true" ]]; then
@@ -341,7 +344,8 @@ jobs:
             if [[ "${{ github.event.inputs.SUSFS_ENABLED }}" == "true" ]]; then
               patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true
             fi   
-            patch -p1 -N -F 3 < scope_min_manual_hooks_v1.4.patch || true
+            # patch -p1 -N -F 3 < scope_min_manual_hooks_v1.4.patch || true
+            patch -p1 -N -F 3 < scope_min_manual_hooks_v1.5.patch || true
             patch -p1 -N -F 3 < 69_hide_stuff.patch || true
           fi
           
